--- a/.vitepress/theme/style/var.css
+++ b/.vitepress/theme/style/var.css
@@ -25,3 +25,11 @@
     display: block; /* 只有在 active 状态下才显示 */
     max-width: 100%;
 }
+
+.medium-zoom-overlay {
+  z-index: 30;
+}
+
+.medium-zoom-image {
+  z-index: 9999 !important;/* 给的值是21，但是实测盖不住，直接999 */
+}
